[gd_scene load_steps=5 format=3 uid="uid://op11vrwqqo0v"]

[ext_resource type="Script" path="res://level_up_screen.gd" id="1_b4nol"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_yekm6"]
size = Vector2(80, 80)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_jftwk"]
size = Vector2(80, 80)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_4drmk"]
size = Vector2(80, 80)

[node name="LevelUpScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b4nol")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -650.0
offset_top = -375.0
offset_right = 650.0
offset_bottom = 375.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelGap" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="Components" type="VBoxContainer" parent="Panel/PanelGap"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="text" type="Label" parent="Panel/PanelGap/Components"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Level Up!"
horizontal_alignment = 1

[node name="Options" type="VBoxContainer" parent="Panel/PanelGap/Components"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Option1" type="Button" parent="Panel/PanelGap/Components/Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "First Option"
icon = SubResource("PlaceholderTexture2D_yekm6")

[node name="Option2" type="Button" parent="Panel/PanelGap/Components/Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Second Option"
icon = SubResource("PlaceholderTexture2D_jftwk")

[node name="Option3" type="Button" parent="Panel/PanelGap/Components/Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Option Three"
icon = SubResource("PlaceholderTexture2D_4drmk")

[connection signal="pressed" from="Panel/PanelGap/Components/Options/Option1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="Panel/PanelGap/Components/Options/Option2" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="Panel/PanelGap/Components/Options/Option3" to="." method="_on_option_3_pressed"]
